argocd/karaoke/service.yaml
apiVersion: v1
kind: Service
metadata:  
  name: karaoke-svc
  namespace: karaoke
spec:
  selector:    
    component: karaoke
  type: ClusterIP
  ports:  
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
